[sem1] some style changes

--- a/CRM-MedicalClinic/module-web/src/main/webapp/resources/css/main.css
+++ b/CRM-MedicalClinic/module-web/src/main/webapp/resources/css/main.css
@@ -57,7 +57,7 @@ a:focus {
 }
 
 #main-slider {
-    background-image: url(../images/slider-bg.jpg);
+    background-image: url(../images/scrubs-2.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
