[sem1] styles for some roles

--- a/CRM-MedicalClinic/module-web/src/main/webapp/resources/css/main.css
+++ b/CRM-MedicalClinic/module-web/src/main/webapp/resources/css/main.css
@@ -57,7 +57,8 @@ a:focus {
 }
 
 #main-slider {
-    background-image: url(../images/scrubs-2.jpg);
+    /*background-image: url(../images/slider-bg.jpg);*/
+    background-color: #2a6496;
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
